client/src/styles.scss
// Colors //
$primary-color: #222529;
$secondary-color: #EFEFEF;

// Fonts //
$primary-font: 'Poppins', sans-serif;
$secondary-font: 'Lato', sans-serif;

// BOX-SHADOW //
$shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);

// Sections //
$section-height: 400px;

.test {
  background-color: $secondary-color;
}
.wireframe {
  border: 1px solid black;
}
.button:hover {
  transform: scale(1.05);
  box-shadow: $shadow;
  transition-property: transform;
  transition-duration: .1s;
}

// FONTS //
.header-text {
  font-family: $primary-font;
  text-align: center;
  text-transform: uppercase;
}
.small-text {
  font-family: $secondary-font;
  text-align: center;
}

// NAV //
.navbar-custom {
  text-transform: uppercase;
  background-color: rgba(255, 255, 255, 0.97);
  min-height: 50px;
  box-shadow: 0 .5px 1px rgba(0,0,0,0.10), 0 .5px .5px rgba(0,0,0,0.20);
}
.bg-dark {
  background-color: $primary-color !important;
}
.nav-btn {
  color: #FFF;
}
.nav-btn:hover {
  text-decoration: none;
  color: $secondary-color;
}
.nav-li {
  text-align: center;
}
@media (max-width: 991.98px) {
  .nav-li:hover {
    background-color: #2d3033
  }
}
@media (min-width: 991.98px) {
  .nav-btn {
    margin-left: 2rem;
  }
}

// HEADER //
.jumbotron-custom {
  height: 90vh;
  background-image: url('./images/test.jpg');
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  // background-color: #BFDFFF;
  margin-top: 56px;
}
.jumbotron-text {
  margin-top: 125px;
  text-align: center;
  color: aliceblue;
}
.goDown {
  display: flex;
  justify-content: center;
  margin-top: 275px;
  height: 50px;
  width: 50px;
}

@media (max-width:  991.98px) {
  .goDown {
    margin-top: 25px;
  }
}

// ABOUT ME //
.about {
  min-height: $section-height;
}
.about-left {
  display: flex;
  justify-content: center;
}
.about-right {
  margin-top: 5%;
  text-align: center;
}
.profile {
  height: 275px;
  margin-top: 20%;
  width: auto;
  border-radius: 50%;
  box-shadow: $shadow;
}
@media (min-width: 991.98px) {
  .about {
    display: flex;
    justify-content: space-around;
  }
}
@media (max-width: 991.98px) {
  .profile {
    height: 200px;
    margin-top: 5%;
  }
  .about-right {
    padding-bottom: 5%;
  }
}

// TECH //
.tech {
  min-height: $section-height;
  margin-top: 2rem;
  padding-top: 50px;
}

.tech-box {
  min-height: 250px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.tech-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.tech-item {
  margin: 1rem;
  font-size: 5em;
}

.icon {
  height: 70px;
  filter: grayscale(100%);
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

// PORTFOLIO //
.portfolio {
  min-height: $section-height;
  padding-top: 50px;
}

.portfolio-grid {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 30px;
  margin-bottom: 50px;
  min-height: 200px;
}

.project {
  box-shadow: 0 .5px 1px rgba(0,0,0,0.10), 0 .5px .5px rgba(0,0,0,0.20);
}

// CONTACT //
.contact {
  height: 325px;
  padding-top: 50px;
}
.contact-body {
  margin-top: 2rem;
}

// FOOTER //
.footer {
  display: flex;
  justify-content: space-around;
  background-color: $primary-color;
  height: 125px;
}
.social-icons-box {
  margin-top: 15px;
  display: flex;
  justify-content: center;
}
.social-icon {
  display: flex;
  justify-content: space-around;
  height: 2.5rem;
  width: 2.5rem;
  padding-top: 4px;
  border-radius: 2px;
  background-color: #303235;
  margin: .5rem;
  font-size: 2rem;
}
.linkedin:hover {
  background-color: #0077B5;
}
.facebook:hover {
  background-color:  #3B5998;
}
.spotify:hover {
  background-color: #1ED760;
}
.social-icon:hover {
  transform: scale(1.1);
  transition: .1s;
}
.footer-text {
  color:#FFF;
}

